flex children text-overflow problem fixed

--- a/src/styles/messages.scss
+++ b/src/styles/messages.scss
@@ -355,9 +355,10 @@
 	}
 
 	&__value {
+		display: inline-block;
 		color: $messageCardValueColor;
+		vertical-align: middle;
 		&.messageType {
-			display: inline-flex;
 			max-width: 48px;
 			@include ellipsis();
 		}
@@ -366,9 +367,7 @@
 	&__icon {
 		width: 15px;
 		height: 15px;
-		&.inline {
-			transform: translateY(4px);
-		}
+		vertical-align: middle;
 	}
 }
 
